Fix Leistungen Body Overflow

--- a/style/scss/partials/leistungen.scss
+++ b/style/scss/partials/leistungen.scss
@@ -1,6 +1,5 @@
 .page-leistungen {
     position: relative;
-    width: 100vw;
     background-color: $background-lightgrey;
 
     .page-leistungen-inner {
